@@ -46,9 +46,6 @@ public class Valley {
     
     private static final double X_EQUALITY_THREHOLD = 1; // meters
     
-    // 2D elevation change between foreground and background boundaries of the valley, used to draw pseudo-3D perspective
-    private static final double PERSPECTIVE_HEIGHT = 250; // meters
-    
     /*
      * WORKAROUND:
      * We don't have a model that matches the background image for x<0.
@@ -94,14 +91,6 @@ public class Valley {
     //----------------------------------------------------------------------------
     // Setters and getters
     //----------------------------------------------------------------------------
-    
-    /**
-     * Gets the height of the pseudo-3D perspective, in meters.
-     * @return
-     */
-    public static double getPerspectiveHeight() {
-        return PERSPECTIVE_HEIGHT;
-    }
     
     /**
      * Gets a reference to the position where the headwall starts (the top of the headwall).
