@@ -74,6 +74,7 @@ CLEANUP:
 
 
 DONE:
+7/23/08 - move PERSPECTIVE_HEIGHT constant from Valley to GlaciersConstants
 ******* 0.00.37 (23428)
 7/23/08 - turn off "snap tools to headwall", so that tools behave the same on both sides of the headwall
 7/23/08 - add a flag to turn "snap tools to headwall" on and off
